--- a/clerk-react/package.json
+++ b/clerk-react/package.json
@@ -29,7 +29,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "together-ai": "^0.6.0-alpha.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
